2006-02-10  8:49 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotNodeOribit) added to dump out cells
	surrounding a node.

2006-02-09 16:20 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauInit) got rid of big-M cost on auxillary,
	they are driven out explitly.

2006-02-09 15:45 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauAuxillaryPivot) created to force auxillary
	varibles out of the basis.
	* src/tableau.c (tableauSolve) .

2006-02-09 13:41 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauLargestPivot) corrected bug in step_length,
	it should be  x / pivot.

2006-02-08 17:08 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleVolume) added to lp solve optimal
	node location by LP tableau.
	* src/tableau.c (tableauInit) fixed array indexing bug that
	read past end of array.
	* src/tableau.c (tableauInit) scaled M by n to make sure that
	the add columns (to create basic feasable solution) are removed.

2006-02-08 17:08 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) passes test for three tri case

2006-02-08 14:48 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridGaussianBackSolve) added to back solve upper
	diagonal matrices

2006-02-08 14:12 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridGaussianElimination) added to transform
	matrices into upper diagonal form

2006-02-07 16:43 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) started driver for tableau.

2006-02-07 16:43 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauSolve) working for 3 tri case.

2006-02-07 11:30 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauBasis) return the active basis.

2006-02-07 10:57 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauCreate) brand new empty object as a place
	holder for a tableau linear programming implementation.
	* util/tableau.m a Octave (MATLAB) to spike out a tableau
	implementation