@@ -1,3 +1,9 @@
+2006-02-10 10:35 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridUntangleAreaUV) to account for cad models
+	that have CADGeom_ReversedSurfaceNormal, the uv of the face are
+	not right handed.
+
 2006-02-10  8:49 Mike Park  <mike.park@nasa.gov>
 
 	* src/grid.c (gridWriteTecplotNodeOribit) added to dump out cells
